# upgrade-ubuntu

./: LICENSE  README.md  post_upgrade.py  pre_upgrade.py  pyproject.toml  utils.py
